--- a/Index.html
+++ b/Index.html
@@ -12,16 +12,106 @@
 
 <body>
 
-    <section class=" my-2 d-flex justify-content-evenly align-items-center text-center ">
-        <div class="cardnew w-50 p-5 my-5 ">
-            <div class="">
-                <h2 id="UserName" class="text-white fs-1" style="font-family: cursive;">Welcome </h2>
+    <section class=" my-2  ">
+        <div class="d-flex justify-content-evenly align-items-center text-center">
+            <div class="card w-50 p-3 my-5 ">
+                <div class="">
+                    <h2 id="UserName" class="text-white fs-1" style="font-family: cursive;">Welcome </h2>
+                </div>
             </div>
 
-            
+            <div class="mx-2"> <button class="btn btn-danger" onclick="goToLoginPage()">Log Out</button></div>
+        </div>
+        <div class="row p-3 m-5 g-3">
+            <div class="col-lg-3 col-md-4 col-sm-6   text-center">
+                <div id="CardView" class="w-100 p-1 ">
+                    <img src="img/1.jpg" class="w-100 rounded-3" alt="">
+                    <h2 class="m-3">Lorem, ipsum dolor.</h2>
+                    <p class="m-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus commodi reiciendis voluptate vel. Assumenda, porro.</p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6   text-center">
+                <div id="CardView" class="w-100 p-1 ">
+                    <img src="img/2.jpg" class="w-100 rounded-3" alt="">
+                    <h2 class="m-3">Lorem, ipsum dolor.</h2>
+                    <p class="m-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus commodi reiciendis voluptate vel. Assumenda, porro.</p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6   text-center">
+                <div id="CardView" class="w-100 p-1 ">
+                    <img src="img/3.jpg" class="w-100 rounded-3" alt="">
+                    <h2 class="m-3">Lorem, ipsum dolor.</h2>
+                    <p class="m-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus commodi reiciendis voluptate vel. Assumenda, porro.</p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6   text-center">
+                <div id="CardView" class="w-100 p-1 ">
+                    <img src="img/4.jpg" class="w-100 rounded-3" alt="">
+                    <h2 class="m-3">Lorem, ipsum dolor.</h2>
+                    <p class="m-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus commodi reiciendis voluptate vel. Assumenda, porro.</p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6   text-center">
+                <div id="CardView" class="w-100 p-1 ">
+                    <img src="img/5.jpg" class="w-100 rounded-3" alt="">
+                    <h2 class="m-3">Lorem, ipsum dolor.</h2>
+                    <p class="m-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus commodi reiciendis voluptate vel. Assumenda, porro.</p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6   text-center">
+                <div id="CardView" class="w-100 p-1 ">
+                    <img src="img/6.jpg" class="w-100 rounded-3" alt="">
+                    <h2 class="m-3">Lorem, ipsum dolor.</h2>
+                    <p class="m-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus commodi reiciendis voluptate vel. Assumenda, porro.</p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6   text-center">
+                <div id="CardView" class="w-100 p-1 ">
+                    <img src="img/2.jpg" class="w-100 rounded-3" alt="">
+                    <h2 class="m-3">Lorem, ipsum dolor.</h2>
+                    <p class="m-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus commodi reiciendis voluptate vel. Assumenda, porro.</p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6   text-center">
+                <div id="CardView" class="w-100 p-1 ">
+                    <img src="img/3.jpg" class="w-100 rounded-3" alt="">
+                    <h2 class="m-3">Lorem, ipsum dolor.</h2>
+                    <p class="m-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus commodi reiciendis voluptate vel. Assumenda, porro.</p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6   text-center">
+                <div id="CardView" class="w-100 p-1 ">
+                    <img src="img/4.jpg" class="w-100 rounded-3" alt="">
+                    <h2 class="m-3">Lorem, ipsum dolor.</h2>
+                    <p class="m-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus commodi reiciendis voluptate vel. Assumenda, porro.</p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6   text-center">
+                <div id="CardView" class="w-100 p-1 ">
+                    <img src="img/2.jpg" class="w-100 rounded-3" alt="">
+                    <h2 class="m-3">Lorem, ipsum dolor.</h2>
+                    <p class="m-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus commodi reiciendis voluptate vel. Assumenda, porro.</p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6   text-center">
+                <div id="CardView" class="w-100 p-1 ">
+                    <img src="img/3.jpg" class="w-100 rounded-3" alt="">
+                    <h2 class="m-3">Lorem, ipsum dolor.</h2>
+                    <p class="m-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus commodi reiciendis voluptate vel. Assumenda, porro.</p>
+                </div>
+            </div>
+            <div class="col-lg-3 col-md-4 col-sm-6   text-center">
+                <div id="CardView" class="w-100 p-1 ">
+                    <img src="img/6.jpg" class="w-100 rounded-3" alt="">
+                    <h2 class="m-3">Lorem, ipsum dolor.</h2>
+                    <p class="m-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus commodi reiciendis voluptate vel. Assumenda, porro.</p>
+                </div>
+            </div>
+
         </div>
 
-        <div class="mx-2"> <button class="btn btn-danger" onclick="goToLoginPage()">Log Out</button></div>
+
+
     </section>
 
 
@@ -31,7 +121,7 @@
     <script>
         var welcomeUserName = JSON.parse(localStorage.getItem("WelcomeUserName"))
         console.log(welcomeUserName)
-        if(welcomeUserName == null){
+        if (welcomeUserName == null) {
             welcomeUserName = "UserName"
         }
         document.querySelector("#UserName").innerHTML += `<span style="color:gold;">${welcomeUserName}</span>`
